--- a/_data/team_phds.yml
+++ b/_data/team_phds.yml
@@ -40,7 +40,7 @@
   twitter: catalinacangea
   web: http://www.cst.cam.ac.uk/~ccc53
   linkedin: https://uk.linkedin.com/in/catalinacangea
-  gscholar: https://scholar.google.co.uk/citations?user=Y0yIZpMAAAAJ&hl=en
+  gscholar: https://www.semanticscholar.org/author/Catalina-Cangea/51906624?sort=total-citations
 
 - name: Ben Day 
   role: Artificial Intelligence, Department of Computer Science and Technology
