--- a/_data/team_phds.yml
+++ b/_data/team_phds.yml
@@ -38,7 +38,7 @@
     I am a final-year PhD student supervised by Prof Pietro Liò. My research focuses on learning multimodal and graph-structured representations of the world; I am also interested in equipping embodied agents with visual reasoning, structural biases and navigation skills. From July to November 2020, I was a Research Scientist Intern at DeepMind, hosted by Piotr Mirowski in the Robotics, Embodied Agents and Lifelong learning (REAL) team led by Raia Hadsell. Previous research experience includes a Graph ML consultancy for Relation Therapeutics, an AI Residency at (Google) X and a research internship at Mila with Aaron Courville.
   # github: 
   twitter: catalinacangea
-  web: http://www.cst.cam.ac.uk/~ccc53
+  web: http://www.cl.cam.ac.uk/~ccc53
   linkedin: https://uk.linkedin.com/in/catalinacangea
   gscholar: https://www.semanticscholar.org/author/Catalina-Cangea/51906624?sort=total-citations
 
