Fix grammar mistake

--- a/_data/team_phds.yml
+++ b/_data/team_phds.yml
@@ -165,7 +165,7 @@
   role: Artificial Intelligence, Department of Computer Science and Technology
   image: assets/img/members/f-opolka.jpeg
   description: > # Can be Markdown
-    I am a PhD student supervised by Professor Pietro Liò working on graph representation learning, probabilistic graph learning, and Bayesian inference. Currently, I am particularly interesting in modelling static and dynamic graphs using stochastic processes.
+    I am a PhD student supervised by Professor Pietro Liò working on graph representation learning, probabilistic graph learning, and Bayesian inference. Currently, I am particularly interested in modelling static and dynamic graphs using stochastic processes.
   # github: HekpoMaH
   twitter: FelixOpo
   web: http://www.felixopolka.me
