--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -12,13 +12,8 @@ columns:
   #     href: http://example.com
   #     new_window: true
 
-  - description: > # E.g. funding acknowledgement. Can be Markdown
-      **We are located at:**
-        The Computer Laboratory,
-        William Gates Building,
-        15 JJ Thomson Avenue,
-        Cambridge CB3 0FD
-    links:
+  # - description: > # E.g. funding acknowledgement. Can be Markdown
+  #   links:
 
 # Small print license statement to add at the bottom of the footer. Can be Markdown
 # Will be prefixed by "© {{ site.author }}" if defined in _config.yml
